@@ -59,7 +59,7 @@ double fprec(double x, double digits)
     double l10, pow10, sgn, p10, P10;
     int e10, e2, do_round, dig;
     /* Max.expon. of 10 (=308.2547) */
-    const double max10e = DBL_MAX_EXP * M_LOG10_2;
+    const static int max10e = DBL_MAX_EXP * M_LOG10_2;
 
 #ifdef IEEE_754
     if (ISNAN(x) || ISNAN(digits))
@@ -86,15 +86,18 @@ double fprec(double x, double digits)
     e10 = (int)(dig-1-floor(l10));
     if(fabs(l10) < max10e - 2) {
 	p10 = 1.0;
-	if(e10 > max10e) {
+	if(e10 > max10e) { /* numbers less than 10^(dig-1) * 1e-308 */
 	    p10 =  R_pow_di(10., e10-max10e);
 	    e10 = max10e;
-	} else if(e10 < - max10e) {
-	    p10 =  R_pow_di(10., e10+max10e);
-	    e10 = -max10e;	    
+	} 
+	if(e10 > 0) { /* Try always to have pow >= 1
+			 and so exactly representable */
+	    pow10 = R_pow_di(10., e10);
+	    return(sgn*(floor(((x*pow10)*p10)+0.5)/pow10)/p10);
+	} else {
+	    pow10 = R_pow_di(10., -e10);
+	    return(sgn*(floor(((x/pow10))+0.5)*pow10));
 	}
-	pow10 = R_pow_di(10., e10);
-	return(sgn*(floor((x*pow10)*p10+0.5)/pow10)/p10);
     } else { /* -- LARGE or small -- */
 	do_round = max10e - l10	 >= R_pow_di(10., -dig);
 	e2 = dig + ((e10>0)? 1 : -1) * MAX_DIGITS;
