@@ -24,6 +24,9 @@ of the last file dialog (PR#8018).
 Yet another Windows' unreliability in seek() has been worked around
 (PR#7896).
 
+formatC() with an exponential format sometimes did not line the fields
+up correctly.
+
 
 
 R 2.1.1
